--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <img src="images/Landmark_Classification.jpg" alt="Landmark classification project thumbnail" />
     </a>
     <h3><a href="https://github.com/Serphine-Amondi/Landmark_Classification.git">LANDMARK CLASSIFICATION</a></h3>
-    <p>Training a CNN to classify famous landmarks</p>
+    <p>Exploring CNNs for classification of famous landmarks</p>
   </article>
 </div>
 
@@ -206,7 +206,7 @@
       <img src="images/Workflow_page-0001.jpg" alt="Machine learning workflow thumbnail" />
     </a>
     <h3><a href="https://github.com/Serphine-Amondi/ML_Workflow.git">MACHINE LEARNING WORKFLOW</a></h3>
-    <p>Ornare nulla proin odio consequat.</p>
+    <p>An ML Workflow built on Amazon Sagemaker</p>
   </article>
 </div>
 
@@ -266,4 +266,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
